# terminus-coord

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
apps/: CMakeLists.txt
apps/tmns-coord-convert/: CMakeLists.txt  Options.cpp  Options.hpp  main.cpp
apps/tmns-coord-test-battery/: CMakeLists.txt  Options.cpp  Options.hpp  TestBench.hpp  Utilities.cpp  Utilities.hpp  main.cpp
apps/tmns-coord-test-battery/data/: options.toml
apps/tmns-coord-test-battery/proj/: Geographic.cpp  Geographic.hpp  UTM.cpp  UTM.hpp
cookbook/: CMakeLists.txt  convert-geog-to-utm.cpp
docs/: Coordinate_KVP_Spec.md
include/terminus/: coord.hpp
include/terminus/coord/types/: Cartesian.hpp  Coordinate.hpp  CoordinateType.hpp  Datum.hpp  DatumType.hpp  Geographic.hpp  Spherical.hpp  TransverseMercator.hpp  UTM.hpp
include/terminus/coord/utilities/: Builder.hpp  Builder_Utilities.hpp  EPSG_Utilities.hpp  KeyType.hpp
include/terminus/coord/xform/: Transformer.hpp  Transformer_Utilities.hpp
python/: create-venv.sh  requirements.txt
scripts/: create-proj-points.py
src/types/: Cartesian.cpp  Coordinate.cpp  CoordinateType.cpp  Datum.cpp  DatumType.cpp  Geographic.cpp  Spherical.cpp  UTM.cpp
src/utilities/: Builder.cpp  Builder_Utilities.cpp  EPSG_Utilities.cpp  KeyType.cpp  string_utilities.hpp
src/xform/: Transformer.cpp
test/unit/: CMakeLists.txt  main.cpp
test/unit/utilities/: TEST_Builder.cpp  TEST_Builder_Utilities.cpp  TEST_EPSG_Utilities.cpp  TEST_KeyType.cpp
